@@ -787,7 +787,7 @@ exports[`ConnectAccountPage should render correctly 1`] = `
               <span
                 class="wcpay-connect-account-page-terms-of-service"
               >
-                By clicking “Set up,” you agree to the 
+                By clicking “Finish Setup” you agree to the 
                 <a
                   href="https://wordpress.com/tos"
                   rel="noopener noreferrer"
