@@ -6,3 +6,6 @@ $gap: 16px;
 $gap-small: 12px;
 $gap-smaller: 8px;
 $gap-smallest: 4px;
+
+// Modals
+$modal-max-width: 500px;
