@@ -146,9 +146,9 @@ class WC_Payments_Utils {
 	 * List of currencies supported by Stripe, the amounts for which are already in the smallest unit.
 	 * Sourced directly from https://stripe.com/docs/currencies#zero-decimal
 	 *
-	 * @return array $currencies
+	 * @return string[]
 	 */
-	public static function zero_decimal_currencies() {
+	public static function zero_decimal_currencies(): array {
 		return [
 			'bif', // Burundian Franc.
 			'clp', // Chilean Peso.
@@ -166,6 +166,27 @@ class WC_Payments_Utils {
 			'xaf', // Central African Cfa Franc.
 			'xof', // West African Cfa Franc.
 			'xpf', // Cfp Franc.
+		];
+	}
+
+	/**
+	 * List of countries enabled for Stripe platform account. See also
+	 * https://docs.woocommerce.com/document/payments/countries/ for the most actual status.
+	 *
+	 * @return string[]
+	 */
+	public static function supported_countries(): array {
+		return [
+			'AU' => __( 'Australia', 'woocommerce-payments' ),
+			'CA' => __( 'Canada', 'woocommerce-payments' ),
+			'DE' => __( 'Germany', 'woocommerce-payments' ),
+			'ES' => __( 'Spain', 'woocommerce-payments' ),
+			'FR' => __( 'France', 'woocommerce-payments' ),
+			'GB' => __( 'United Kingdom (UK)', 'woocommerce-payments' ),
+			'IE' => __( 'Ireland', 'woocommerce-payments' ),
+			'IT' => __( 'Italy', 'woocommerce-payments' ),
+			'NZ' => __( 'New Zealand', 'woocommerce-payments' ),
+			'US' => __( 'United States (US)', 'woocommerce-payments' ),
 		];
 	}
 
