@@ -113,6 +113,7 @@ Please note that our support for the checkout block is still experimental and th
 * Update - Instant deposit inbox note wording.
 * Fix - Deposit overview details for non instant ones.
 * Update - Payment request button should guide users to login when necessary.
+* Add - When setting WooCommerce Payments up, inform if merchant business country is not supported.
 
 = 2.5.0 - 2021-06-02 =
 * Fix - Fix hover dialog for close button on modals, unify styling and layout of modal buttons.
